syntax = "proto3";

package chord;

option go_package = "./protocol";

// The Chord service definition
service Chord {
  // Ping is a simple health check
  rpc Ping(PingRequest) returns (PingResponse);
  
  // Put stores a key-value pair
  rpc Put(PutRequest) returns (PutResponse);
  
  // Get retrieves a value for a key
  rpc Get(GetRequest) returns (GetResponse);
  
  // Delete removes a key-value pair
  rpc Delete(DeleteRequest) returns (DeleteResponse);
  
  // GetAll retrieves all key-value pairs
  rpc GetAll(GetAllRequest) returns (GetAllResponse);
  
  rpc GetPredecessor(GetPredecessorRequest) returns (GetPredecessorResponse);
  
  rpc Notify(NotifyRequest) returns (NotifyResponse);
}

// Message definitions
message PingRequest {}
message PingResponse {}

message PutRequest {
  string key = 1;
  string value = 2;
}
message PutResponse {}

message GetRequest {
  string key = 1;
}
message GetResponse {
  string value = 1;
}

message DeleteRequest {
  string key = 1;
}
message DeleteResponse {}

message GetAllRequest {}
message GetAllResponse {
  map<string, string> key_values = 1;
}

message GetPredecessorRequest {}
message GetPredecessorResponse {
  string address = 1;
}

message NotifyRequest {
  string address = 1;
}
message NotifyResponse {}